<resources>
    <string name="app_name">TodoApp</string>
    <string name="buat_disini">Buat disini</string>
    <string name="anda_belum_punya_akun">Anda belum punya akun ?</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_todoapp">Register TodoApp</string>
    <string name="register">Register</string>
    <string name="keluar">Keluar</string>
    <string name="tambah">Tambah</string>
    <string name="masukan_text">Masukan Text</string>
    <string name="input">INPUT</string>
    <string name="creator">Creator</string>
    <string name="text">Text</string>
    <string name="edit_todos">EDIT TODOS</string>
    <string name="hapus_todos">HAPUS TODOS</string>
</resources>
